<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.infotop.eshop.activities.SubListCategoryActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/abCartList"
        android:checkable="true"
        android:icon="@drawable/ic_cart"
        android:showAsAction="always"
        android:title="@string/ac_cartList"/>
    <item
        android:id="@+id/abOverflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_overflow">
        <menu>
            <item
                android:id="@+id/abLogin"
                android:icon="@drawable/ic_action_person"
                android:showAsAction="ifRoom"
                android:title="@string/ac_Login"/>
            <item
                android:id="@+id/abwishlist"
                android:icon="@drawable/ic_action_favorite"
                android:showAsAction="never"
                android:title="@string/ac_wishlist"/>
            <item
                android:id="@+id/abTrackOrder"
                android:icon="@drawable/ic_action_share"
                android:showAsAction="never"
                android:title="@string/ac_TrackOrder"/>
            <item
                android:id="@+id/abRateApp"
                android:icon="@drawable/ic_action_labels"
                android:showAsAction="never"
                android:title="@string/ac_RateApp"/>
            <item
                android:id="@+id/abShareApp"
                android:icon="@drawable/ic_action_share"
                android:showAsAction="never"
                android:title="@string/ac_ShareApp"/>
            <item
                android:id="@+id/abPolicies"
                android:icon="@drawable/ic_action_view_as_list"
                android:showAsAction="never"
                android:title="@string/ac_Policies"/>
             <item
                android:id="@+id/abContactUs"
                android:icon="@drawable/ic_action_call"
                android:showAsAction="never"
                android:title="@string/ac_ContactUs"/>
             <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_action_person"
                android:showAsAction="never"
                android:title="@string/ac_LogOut"/>
        </menu>
    </item>

</menu>
