<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.infotop.eshop.EshopMainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_search4"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="ifRoom"
        android:title="@string/action_overflow"/>
    <item
        android:id="@+id/action_search1"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_notification"/>
    <item
        android:id="@+id/action_search2"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_kart"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>